# study

./: .gitignore  README.md  requirements.txt
backend/: .gitignore
backend/automation/document-handling/: html_to_pdf_pyppeteer.py  html_to_pdf_wp.py
backend/automation/sheet-handling/: certificates.json  products.json
backend/crypt/: app.py  pyproject.toml
backend/data/orm/sql_alchemy_1/: .gitignore  app.py  pyproject.toml
backend/data/orm/sql_alchemy_1/app/config/: db.py
backend/data/orm/sql_alchemy_1/app/model/: user.py
backend/data/orm/sql_alchemy_2/: pyproject.toml  quick_test.py
backend/data/orm/sql_alchemy_2/app/: __init__.py
backend/data/orm/sql_alchemy_2/app/model/: user.py
backend/lab/automation/: rename.py
backend/lab/fastify-api/: README.md  biome.json  package.json  tsconfig.json
backend/lab/web/flask/flask3/: .gitignore  QUICKSTART.md  SUMMARY.md  example_usage.py  mypy.ini  pyproject.toml  run.py
backend/lab/web/flask/flask3/src/: app.py  cache.py  config.py  dal.py  models.py  routes.py  schemas.py
backend/lab/web/flask/flask3/tests/: conftest.py  test_app.py  test_persons.py  test_smoke.py  test_users.py
backend/testing/automation/: rename_books.py  rename_files_and_dirs.py
backend/testing/data/orm-4-mongodb/: app.py  pyproject.toml
backend/testing/test/test1-pytest/: pyproject.toml
backend/testing/test/test1-pytest/app/: main.py
backend/training/automation/: rename_files_dev_safe.py
cs/lab/sorting/: .clang-format  CMakeLists.txt  README.md  run.sh
frontend/javascript/js00/: ator.js  carro.js  imagens.js  p5.collide2d.js
frontend/javascript/js01/: sketch.js
frontend/javascript/js02/: README.md  main.js
frontend/javascript/js03/: canvas2.html  canvas2.js  canvas2.ts  canvas3.js  canvas4.html  canvas4.js  canvas5.html  canvas5.js
frontend/javascript/js07/: README.md  cadastro-finalizado.html  script.js
frontend/javascript/js08/: db.json
frontend/javascript/js09/: db-1680442099429.json  db.json
frontend/lab/next-auth/: docker-compose.yml
frontend/lab/next-minio/: docker-compose.yml  package.json
frontend/lab/next-mongo-s3/: package.json
frontend/lab/next-zustand-jest/: .gitignore  package.json
frontend/libs/test-shadcn/: index.html  package.json  tsconfig.app.json
frontend/testing/next-auth/: package-lock.json  package.json  tsconfig.json
frontend/testing/next-minio/: next.config.ts  package.json
frontend/testing/next-mongo/: package.json
frontend/testing/next-mongodb/: docker-compose.yml  package.json
frontend/testing/next-tanstack/: docker-compose.yml  jest.setup.ts  package.json
frontend/testing/next-zustand-jest/: .gitignore  README.md  package.json  tsconfig.json
frontend/testing/shadcn/: vite.config.ts
frontend/testing/test-shadcn/: bun.lockb
frontend/training/next-mongo-redis/: package.json
frontend/training/next-zustand-jest/: jest.config.ts
frontend/typescript/ts01/: index.ts
fullstack/fundamentals/00-mongodb-intro/: package.json
fullstack/lab/next-15-5-5/: README.md  middleware.ts  package.json
infra/filtrando_conteudo/: .swp  1  passwd
js/: .editorconfig  .gitignore
linux/filtrando_conteudo/: .services.swp  list
(+985 files in other folders)
