[project]
name = "sql-alchemy-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "uuid-utils>=0.10.0",
]
