[project]
name = "sql-alchemy-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2",
    "pymongo>=4",
    "pymysql>=1",
    "redis>=5",
    "ruff>=0.9",
    "sqlalchemy>=2",
    "uuid-utils>=0.10",
]
