[project]
name = "test1-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3"]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.taskipy.tasks]
dev = "uv run app/main.py"
test = "coverage run -m pytest; coverage report -m"
cov = "coverage report -m"
